--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -6,6 +6,7 @@ ENV PIP_NO_CACHE_DIR=1
 
 RUN apt update && apt upgrade -y \
  && apt install -y \
+    curl \
     mopidy \
     python3-pip \
  && pip install \
