--- a/snapserver/Dockerfile
+++ b/snapserver/Dockerfile
@@ -2,13 +2,13 @@ FROM debian:11-slim
 LABEL Author="Rogger Fabri"
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV PIP_NO_CACHE_DIR=1
 
 ARG snapcast_version=0.27.0
 ARG target_arch=armhf
 
 RUN apt update && apt upgrade -y \
     curl \
+    dumb-init \
  && curl -sLO https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapserver_${snapcast_version}-1_${target_arch}.deb \
  && dpkg --add-architecture armhf \
  && dpkg -i snapserver_${snapcast_version}-1_${target_arch}.deb \
@@ -28,7 +28,9 @@ RUN /usr/bin/snapserver -v
 
 EXPOSE 1704 1705 1780
 
-ENTRYPOINT ["/bin/bash","-c","/usr/bin/snapserver"]
+ENTRYPOINT ["dumb-init", "--"]
+
+CMD ["bash","-c","snapserver"]
 
 HEALTHCHECK --interval=60s --timeout=5s --retries=3 \
     CMD curl --connect-timeout 5 --silent --show-error --fail http://localhost:1780/ || exit 1
