fix missing master trigger for icecast

--- a/.github/workflows/icecast-arm64v8.yml
+++ b/.github/workflows/icecast-arm64v8.yml
@@ -3,6 +3,8 @@ name: icecast-arm64v8
 on:
   workflow_dispatch:
   push:
+    branches:
+      - "master"
     paths:
       - "icecast/**"
   schedule:
