snapcast v0.28 and debian:12-slim

--- a/snapserver/Dockerfile
+++ b/snapserver/Dockerfile
@@ -1,19 +1,20 @@
-FROM debian:11-slim
+FROM debian:12-slim
 LABEL Author="Rogger Fabri"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG snapcast_version=0.27.0
-ARG target_arch=armhf
+ARG snapcast_version=0.28.0
+ARG target_arch=arm64
+ARG dist=bookworm
 
 RUN apt update && apt upgrade -y \
     curl \
     dumb-init \
- && curl -sLO https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapserver_${snapcast_version}-1_${target_arch}.deb \
- && dpkg --add-architecture armhf \
- && dpkg -i snapserver_${snapcast_version}-1_${target_arch}.deb \
+ && curl -sLO https://github.com/badaix/snapcast/releases/download/v${snapcast_version}/snapserver_${snapcast_version}-1_${target_arch}-${dist}.deb \
+ && dpkg --add-architecture arm64 \
+ && dpkg -i snapserver_${snapcast_version}-1_${target_arch}-${dist}.deb \
   ; apt update && apt -f install -y \
- && rm snapserver_${snapcast_version}-1_${target_arch}.deb \
+ && rm snapserver_${snapcast_version}-1_${target_arch}-${dist}.deb \
  && curl -sL https://dtcooper.github.io/raspotify/install.sh | sh \
  && apt purge --auto-remove -y \
     gcc \
