install sudo package

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -12,6 +12,7 @@ RUN apt update && apt upgrade -y \
     dumb-init \
     mopidy \
     python3-pip \
+    sudo \
  && mkdir -p ~/.config/pip && printf "[global]\nbreak-system-packages = true\n" | tee ~/.config/pip/pip.conf \
  && pip install \
     Mopidy-Iris \
