--- a/.github/workflows/snapclient-arm64v8.yml
+++ b/.github/workflows/snapclient-arm64v8.yml
@@ -11,13 +11,19 @@ on:
     - cron: '0 5 * * *'
 
 jobs:
-  build:
-    name: Call Azure Pipeline
-    runs-on: ubuntu-latest
+  docker:
+    runs-on: self-hosted
     steps:
-      - name: Azure Pipelines Action
-        uses: Azure/pipelines@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          azure-devops-project-url: https://dev.azure.com/${{ secrets.AZURE_DEVOPS_ORG }}/${{ secrets.AZURE_DEVOPS_PROJECT }}
-          azure-pipeline-name: "snapclient [docker-image]"
-          azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and Push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:snapclient"
+          tags: ${{ secrets.DOCKERHUB_SLUG }}/snapclient:arm64v8-latest
