--- a/.github/workflows/icecast-arm64v8.yml
+++ b/.github/workflows/icecast-arm64v8.yml
@@ -26,4 +26,6 @@ jobs:
         with:
           push: true
           context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:icecast"
-          tags: ${{ secrets.DOCKERHUB_SLUG }}/icecast:arm64v8-latest
+          tags: |
+            ${{ secrets.DOCKERHUB_SLUG }}/icecast:arm64v8-latest
+            ${{ secrets.DOCKERHUB_SLUG }}/icecast:arm64v8-${{github.run_number}}
