--- a/.github/workflows/mopidy-amd64.yaml
+++ b/.github/workflows/mopidy-amd64.yaml
@@ -26,4 +26,6 @@ jobs:
         with:
           push: true
           context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:mopidy"
-          tags: ${{ secrets.DOCKERHUB_SLUG }}/mopidy:amd64-latest
+          tags: |
+            ${{ secrets.DOCKERHUB_SLUG }}/mopidy:amd64-latest
+            ${{ secrets.DOCKERHUB_SLUG }}/mopidy:amd64-${{github.run_number}}
