missing target arch for mopidy arm64

--- a/.github/workflows/mopidy-arm64v8.yml
+++ b/.github/workflows/mopidy-arm64v8.yml
@@ -27,3 +27,5 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_SLUG }}/mopidy:arm64v8-latest
             ${{ secrets.DOCKERHUB_SLUG }}/mopidy:arm64v8-${{github.run_number}}
+          build-args: |
+            ARCH=arm64
