remove self-hosted builder

--- a/.github/workflows/snapserver-amd64.yaml
+++ b/.github/workflows/snapserver-amd64.yaml
@@ -9,7 +9,7 @@ on:
       - "snapserver/**"
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
