--- a/.github/workflows/mopidy-arm64v8.yaml
+++ b/.github/workflows/mopidy-arm64v8.yaml
@@ -9,23 +9,28 @@ on:
       - "mopidy/**"
 
 jobs:
-  docker:
-    runs-on: self-hosted
+  build-and-push:
+    runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           push: true
-          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:mopidy"
+          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:snapserver"
           tags: |
             ${{ secrets.DOCKERHUB_SLUG }}/mopidy:arm64v8-latest
             ${{ secrets.DOCKERHUB_SLUG }}/mopidy:arm64v8-${{github.run_number}}
+          platforms: linux/arm64
           build-args: |
             ARCH=arm64
