--- a/.github/workflows/snapserver-arm64v8.yaml
+++ b/.github/workflows/snapserver-arm64v8.yaml
@@ -1,4 +1,4 @@
-name: snapserver-arm64v8-buildx
+name: snapserver-arm64v8
 
 on:
   workflow_dispatch:
@@ -11,26 +11,18 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
-
-      # Set up QEMU for cross-architecture builds
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
