--- a/.github/workflows/stream-manager-amd64.yaml
+++ b/.github/workflows/stream-manager-amd64.yaml
@@ -9,7 +9,7 @@ on:
       - "stream-manager/**"
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
