--- a/.github/workflows/snapclient-arm64v8.yaml
+++ b/.github/workflows/snapclient-arm64v8.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:snapserver"
+          context: "${{ github.server_url }}/${{ github.repository }}.git#${{ github.ref }}:snapclient"
           tags: |
             ${{ secrets.DOCKERHUB_SLUG }}/snapclient:arm64v8-latest
             ${{ secrets.DOCKERHUB_SLUG }}/snapclient:arm64v8-${{github.run_number}}
