--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -18,7 +18,7 @@ COPY www/ /usr/share/icecast2/web/
 
 RUN chown -R icecast2 /usr/share/icecast2
 
-ADD ./start.sh /start.sh
+COPY ./start.sh /start.sh
 
 EXPOSE 8000
 
