--- a/.github/workflows/snapclient-arm64v8.yaml
+++ b/.github/workflows/snapclient-arm64v8.yaml
@@ -7,6 +7,8 @@ on:
       - "master"
     paths:
       - "snapclient/**"
+  repository_dispatch:
+    types: [snapcast-update-version]
 
 jobs:
   build-and-push:
