build(snapclient): update Dockerfile to Debian base and add arch-specific build args
Switch from Alpine to Debian 12-slim base image for better compatibility.
Install snapclient via official deb package using version 0.34.0 and target architecture.
Update CI workflows to pass build args for amd64 and arm64v8 platforms.
Remove unnecessary packages and clean up caches for smaller image size.

--- a/.github/workflows/snapclient-amd64.yaml
+++ b/.github/workflows/snapclient-amd64.yaml
@@ -29,3 +29,5 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_SLUG }}/snapclient:amd64-latest
             ${{ secrets.DOCKERHUB_SLUG }}/snapclient:amd64-${{github.run_number}}
+          build-args: |
+            target_arch=amd64
