ci(snapcast): add triggers for snapserver and snapclient builds on version update
Enhance the CI/CD pipeline to trigger builds for snapserver-amd64, snapserver-arm64v8, and snapclient-arm64v8 when a snapcast version update is detected. Refactor the update script to handle multiple Dockerfiles instead of just the snapserver one, improving maintainability and coverage for all snapcast-related images.

--- a/.github/workflows/snapcast-update-version.yaml
+++ b/.github/workflows/snapcast-update-version.yaml
@@ -64,3 +64,19 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           event-type: snapcast-update-version
+
+      - name: Trigger snapserver-amd64 Build
+        if: steps.diff.outputs.changed == 'true'
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          event-type: snapcast-update-version
+
+      - name: Trigger snapserver-arm64v8 Build
+        if: steps.diff.outputs.changed == 'true'
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          event-type: snapcast-update-version
