--- a/.github/workflows/snapserver-amd64.yaml
+++ b/.github/workflows/snapserver-amd64.yaml
@@ -7,6 +7,8 @@ on:
       - "master"
     paths:
       - "snapserver/**"
+  repository_dispatch:
+    types: [snapcast-update-version]
 
 jobs:
   build-and-push:
