build(snapclient): update healthcheck to use proc comm for process detection
The healthcheck command in the snapclient Dockerfile was modified to check for the snapclient process using 'cat /proc/*/comm | grep -q '^snapclient$'' instead of 'pgrep snapclient'. This change improves reliability in containerized environments where pgrep might not accurately detect the process, ensuring more consistent health monitoring.

--- a/snapclient/Dockerfile
+++ b/snapclient/Dockerfile
@@ -28,4 +28,4 @@ ENTRYPOINT ["dumb-init", "--"]
 CMD ["sh","-c","snapclient -h $SERVER -s $DEVICE --hostID $CLIENT_ID"]
 
 HEALTHCHECK --interval=5s --timeout=3s \
-   CMD pgrep snapclient || exit 1
+   CMD cat /proc/*/comm | grep -q '^snapclient$' || exit 1
