feat: add libshout3 to apt install and simplify Dockerfile
- Add `libshout3` to the list of packages installed via `apt`
- Remove manual download and installation of `libshout3` from Debian repository
- Simplify the Dockerfile by reducing redundant commands and cleanup steps

This change streamlines the Dockerfile by leveraging the official package manager for `libshout3` instead of manually downloading and installing it, making the build process more maintainable and reliable.

--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -12,6 +12,7 @@ RUN apt update && apt upgrade -y \
  && apt install -y \
     curl \
     dumb-init \
+    libshout3 \
     mopidy \
     python3-pip \
     sudo \
@@ -32,11 +33,7 @@ RUN apt update && apt upgrade -y \
 RUN curl -L -o gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_FILE}_${ARCH}.deb https://github.com/kingosticks/gst-plugins-rs-build/releases/download/gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_PATH}/gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_FILE}_${ARCH}.deb \
  && dpkg -i gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_FILE}_${ARCH}.deb \
   ; apt update && apt -f install -y \
- && rm gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_FILE}_${ARCH}.deb \
- && curl -L -o libshout3_2.4.1-2_${ARCH}.deb http://ftp.de.debian.org/debian/pool/main/libs/libshout/libshout3_2.4.1-2_${ARCH}.deb \
- && dpkg -i libshout3_2.4.1-2_${ARCH}.deb \
-  ; apt update && apt -f install -y \
- && rm libshout3_2.4.1-2_${ARCH}.deb
+ && rm gst-plugin-spotify_${GST_PLUGIN_SPOTIFY_VERSION_FILE}_${ARCH}.deb
 
 RUN sh -c 'echo "mopidy ALL=NOPASSWD: /usr/local/lib/python3.11/dist-packages/mopidy_iris/system.sh" >> /etc/sudoers'
 
